Fix SonarCloud issues in test files and improve test coverage